540415: Add feature leaves