@@ -4,8 +4,10 @@ import com.syberry.bakery.converter.ContractConverter;
 import com.syberry.bakery.dto.ContractFullDto;
 import com.syberry.bakery.dto.ContractSaveDto;
 import com.syberry.bakery.dto.ContractShortDto;
+import com.syberry.bakery.dto.RoleName;
 import com.syberry.bakery.entity.Contract;
 import com.syberry.bakery.entity.Employee;
+import com.syberry.bakery.exception.AccessException;
 import com.syberry.bakery.exception.CreateException;
 import com.syberry.bakery.exception.DeleteException;
 import com.syberry.bakery.exception.EntityNotFoundException;
@@ -16,12 +18,18 @@ import com.syberry.bakery.service.ContractService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
 
 import javax.transaction.Transactional;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
+import java.util.Optional;
+
+import static com.syberry.bakery.util.SecurityContextUtil.getUserDetails;
+import static com.syberry.bakery.util.SecurityContextUtil.hasAnyAuthority;
+import static com.syberry.bakery.util.SecurityContextUtil.hasAuthority;
 
 @Service
 @RequiredArgsConstructor
@@ -30,6 +38,7 @@ public class ContractServiceImpl implements ContractService {
     private final EmployeeRepository employeeRepository;
 
     @Override
+    @PreAuthorize("hasAnyRole('ADMIN', 'HR', 'ACCOUNTANT')")
     public Page<ContractShortDto> getAllContracts(Pageable pageable, String name) {
         return contractRepository
                 .findByEmployeeIsBlockedFalseAndFilterIn(pageable, name)
@@ -37,19 +46,36 @@ public class ContractServiceImpl implements ContractService {
     }
 
     @Override
+    @PreAuthorize("hasAnyRole('ADMIN', 'HR', 'ACCOUNTANT', 'USER')")
     public ContractFullDto getByContractId(Long id) {
-        return ContractConverter.toFullInfoDto(contractRepository.findByIdAndEmployeeUserIsBlockedFalse(id)
-                .orElseThrow(() -> new EntityNotFoundException("There is no such contract")));
+        Contract contract = contractRepository.findByIdAndEmployeeUserIsBlockedFalse(id)
+                .orElseThrow(() -> new EntityNotFoundException("There is no such contract"));
+        if (hasAnyAuthority(List.of(RoleName.ROLE_ADMIN, RoleName.ROLE_HR, RoleName.ROLE_ACCOUNTANT))
+                || (hasAuthority(RoleName.ROLE_USER)
+                && Objects.equals(getEmailByContract(contract), getUserDetails().getUsername()))) {
+            return ContractConverter.toFullInfoDto(contract);
+        }
+        throw new AccessException("Viewing other people's contracts is prohibited");
+
     }
 
     @Override
+    @PreAuthorize("hasAnyRole('ADMIN', 'HR', 'ACCOUNTANT')")
     public List<ContractShortDto> getByEmployeeId(Long id) {
         return contractRepository.findByEmployeeIdAndEmployeeUserIsBlockedFalse(id)
-                .stream().map(ContractConverter::toShortInfoDto).collect(Collectors.toList());
+                .stream().map(ContractConverter::toShortInfoDto).toList();
+    }
+
+    @Override
+    @PreAuthorize("hasAnyRole('ADMIN', 'HR', 'ACCOUNTANT', 'USER')")
+    public List<ContractShortDto> getAllOwnedContracts() {
+        return contractRepository.findByEmployeeUserEmailAndEmployeeUserIsBlockedFalse(getUserDetails().getUsername())
+                .stream().map(ContractConverter::toShortInfoDto).toList();
     }
 
     @Override
     @Transactional
+    @PreAuthorize("hasAnyRole('ADMIN', 'HR')")
     public ContractFullDto saveContract(ContractSaveDto dto) {
         try {
             if (contractRepository.findByEmployeeIdAndEmployeeUserIsBlockedFalse(dto.getEmployeeId()).isEmpty()) {
@@ -60,6 +86,9 @@ public class ContractServiceImpl implements ContractService {
             }
             validateProbationPeriod(dto);
             Contract contract = ContractConverter.toEntity(dto, employeeRepository);
+            if (Objects.equals(getUserDetails().getUsername(), getEmailByContract(contract))) {
+                throw new CreateException("You can't create a contract for yourself");
+            }
             contract.setCreatedAt(LocalDateTime.now());
             return ContractConverter.toFullInfoDto(contractRepository.save(contract));
         } catch (IllegalArgumentException e) {
@@ -69,11 +98,29 @@ public class ContractServiceImpl implements ContractService {
 
     @Override
     @Transactional
+    @PreAuthorize("hasAnyRole('ADMIN', 'HR')")
     public ContractFullDto updateContract(ContractSaveDto dto) {
         validateProbationPeriod(dto);
         Contract contract = checkFieldsForUpdate(dto);
+        if (Objects.equals(getUserDetails().getUsername(), getEmailByContract(contract))) {
+            throw new UpdateException("You can't update a contract for yourself");
+        }
         contract.setUpdatedAt(LocalDateTime.now());
         return ContractConverter.toFullInfoDto(contractRepository.save(contract));
+    }
+
+    @Override
+    @PreAuthorize("hasAnyRole('ADMIN', 'HR')")
+    public void deleteContract(Long id) {
+        Optional<Contract> contract = contractRepository.findByIdAndEmployeeUserIsBlockedFalse(id);
+        if (contract.isPresent()) {
+            if (Objects.equals(getUserDetails().getUsername(), getEmailByContract(contract.get()))) {
+                throw new DeleteException("You can't delete your contract");
+            }
+            contractRepository.deleteById(id);
+        } else {
+            throw new DeleteException("There is no such contract");
+        }
     }
 
     private Contract checkFieldsForUpdate(ContractSaveDto dto) {
@@ -91,6 +138,7 @@ public class ContractServiceImpl implements ContractService {
         contract.setProbationEndDate(dto.getProbationEndDate());
         return contract;
     }
+
     private static void validateProbationPeriod(ContractSaveDto dto) {
         if (dto.getProbationPeriod() && (dto.getProbationStartDate() == null || dto.getProbationEndDate() == null)) {
             throw new CreateException("If the employee has a probation period, then the dates must be filled in");
@@ -99,12 +147,7 @@ public class ContractServiceImpl implements ContractService {
         }
     }
 
-    @Override
-    public void deleteContract(Long id) {
-        if (contractRepository.findByIdAndEmployeeUserIsBlockedFalse(id).isPresent()) {
-            contractRepository.deleteById(id);
-        } else {
-            throw new DeleteException("There is no such contract");
-        }
+    private String getEmailByContract(Contract contract) {
+        return contract.getEmployee().getUser().getEmail();
     }
 }
